syntax = "proto3";

import "animalai/communicator_objects/arena_configuration_proto.proto";

option csharp_namespace = "AAIOCommunicators";
package communicator_objects;

message ArenasConfigurationsProto {

    map<int32,ArenaConfigurationProto> arenas = 1;
    int32 seed = 2;
}

