syntax = "proto3";

option csharp_namespace = "AAIO.CommunicatorObjects";
package communicator_objects;

message ArenaParametersProto {

    message ItemsToSpawn {

        message Vector3 {
            float x = 1;
            float y = 2;
            float z = 3;
        }

        string name =1;
        repeated Vector3 positions = 3;
        repeated float rotations = 4;
        repeated Vector3 sizes = 5;
        repeated Vector3 colors = 6;
    }

    int32 t = 1;
    repeated ItemsToSpawn items = 2;
    repeated int32 blackouts = 3;
}
